--- a/style.css
+++ b/style.css
@@ -3,6 +3,25 @@
 src: url('ccc.ttf');
 }
 
+body {
+  background-color: black;
+}
+
 h1 {
   font-family: "Cassidy_Club_Calligraphy";
+  font-size: 160;
+  color: white;
+  text-align: center;
 }
+
+p {
+  color: white;
+}
+
+div.centered {
+margin-left:auto;
+margin-right:auto;
+width:80%;
+}
+
+
