--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ h1 {
     text-align: center;
 }
 
+h2.single {
+    color: black;
+    font-family: "Cassidy_Club_Calligraphy";
+}
+
 
 /*menu stuff*/
 
